--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   },
   "dependencies": {
     "expo": "~39.0.2",
+    "expo-file-system": "~9.2.0",
+    "expo-image-manipulator": "~8.3.0",
+    "expo-image-picker": "~9.1.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-image-base64": "^0.1.4",
+    "react-native-image-picker": "^2.3.4",
+    "react-native-twilio-chat": "^0.3.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
